erDiagram
    PRODUCT ||--o{ INVENTORY : "tiene existencias"
    BRANCH ||--o{ INVENTORY : "alberga"
    BRANCH ||--o{ PURCHASE : "recibe"
    PURCHASE ||--|{ PURCHASE_DETAIL : "contiene"
    PRODUCT ||--o{ PURCHASE_DETAIL : "es comprado"
    BRANCH ||--o{ SALE : "realiza"
    SALE ||--|{ SALE_DETAIL : "contiene"
    PRODUCT ||--o{ SALE_DETAIL : "es vendido"
    BRANCH ||--o{ TRANSFER : "es origen/destino"
    TRANSFER ||--|{ TRANSFER_DETAIL : "contiene items"
    PRODUCT ||--o{ TRANSFER_DETAIL : "se transfiere"
    BRANCH ||--o{ INVENTORY_ADJUSTMENT : "registra merma"
    PRODUCT ||--o{ INVENTORY_ADJUSTMENT : "es ajustado"
    TRANSFER ||--o{ INVENTORY_ADJUSTMENT : "causa faltante"
